k8s/milli-prod/apps/helios/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mino-helios
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  tls:
    - secretName: milli-helios-tls
      hosts: ["helios.milli-bank.com"]
  rules:
    - host: helios.milli-bank.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mino-helios
              servicePort: http
